<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_search"
        android:enabled="true"
        android:icon="@drawable/baseline_apps_24"
        android:title="@string/search" />
    <item
        android:id="@+id/nav_library"
        android:enabled="true"
        android:icon="@drawable/baseline_account_balance_24"
        android:title="@string/account_user" />
    <item
        android:id="@+id/nav_user"
        android:enabled="true"
        android:icon="@drawable/account_user"
        android:title="@string/account_user" />

</menu>